# DataProcessor

./: CMakeLists.txt
include/: psr_average.h  psr_calibration.h  psr_changetype.h  psr_common.h  psr_covariance.h  psr_findpeaks.h  psr_fouriertransform.h  psr_gauss.h  psr_integration.h  psr_median.h  psr_rank.h  psr_rationing.h  psr_selection.h  psr_standartize.h  psr_unique.h  psr_variance.h
include/filters/: psr_gaussfilter.h  psr_medianfilter.h  psr_windowfilter.h
include/relation/: psr_line.h  psr_plane.h  psr_polynomial.h  psr_powerfunction.h  psr_relation.h
include/statistics/: psr_assymetryparameter.h  psr_asymmetryparameter.h  psr_averageroughness.h  psr_curvesproximity.h  psr_excessmeasure.h  psr_pearsoncoefficient.h  psr_rmsroughness.h  psr_spearmancoefficient.h
src/: psr_average.cpp  psr_gauss.cpp  psr_integration.cpp  psr_median.cpp  psr_rank.cpp  psr_rationing.cpp  psr_selection.cpp  psr_standartize.cpp  psr_variance.cpp
src/filters/: psr_gaussfilter.cpp  psr_medianfilter.cpp  psr_windowfilter.cpp
src/relation/: psr_line.cpp  psr_powerfunction.cpp  psr_relation.cpp
src/statistics/: psr_curvesproximity.cpp  psr_pearsoncoefficient.cpp  psr_spearmancoefficient.cpp
