cmake_minimum_required(VERSION 3.16)

set(DATA_PROCESSOR_LIBRARY_NAME psr)
project(${DATA_PROCESSOR_LIBRARY_NAME} LANGUAGES CXX)

set(CMAKE_CXX_STANDARD 23)
set(CMAKE_CXX_STANDARD_REQUIRED ON)

find_package(Qt6 COMPONENTS Core)

set(INCLUDE_ROOT ${CMAKE_CURRENT_SOURCE_DIR}/include)
file(GLOB HEADERS ${INCLUDE_ROOT}/*.h ${INCLUDE_ROOT}/*/*.h)

add_library(${DATA_PROCESSOR_LIBRARY_NAME} INTERFACE)
target_include_directories(${DATA_PROCESSOR_LIBRARY_NAME} INTERFACE
    $<BUILD_INTERFACE:${INCLUDE_ROOT}>
	$<BUILD_INTERFACE:${INCLUDE_ROOT}/filters>
	$<BUILD_INTERFACE:${INCLUDE_ROOT}/relation>
	$<BUILD_INTERFACE:${INCLUDE_ROOT}/statistics>
)
if (${Qt6_FOUND})
  target_compile_definitions(${DATA_PROCESSOR_LIBRARY_NAME} INTERFACE QT)
endif()
